@@ -351,7 +351,6 @@ Miscellaneous: options, plots...
  stk_options_get
  stk_options_set
  stk_plot1d
-#stk_plot2d           [deprecated]
 #stk_plot_shadedci    [internal]
  stk_runtests
  stk_version
