@@ -2,18 +2,12 @@
 
 % Copyright Notice
 %
-%    Copyright (C) 2014 SUPELEC
+%    Copyright (C) 2016 CentraleSupelec
+%    Copyright (C) 2013 Valentin Resseguier
+%    Copyright (C) 2012-2014 SUPELEC
 %
 %    Author:  Julien Bect  <julien.bect@centralesupelec.fr>
-%
-%    This file recycles part of stk_plot2d.m (now deprecated):
-%
-%       Copyright (C) 2014 SUPELEC
-%       Copyright (C) 2013 SUPELEC & Valentin Resseguier
-%       Copyright (C) 2012 SUPELEC
-%
-%       Authors:  Julien Bect          <julien.bect@centralesupelec.fr>
-%                 Valentin Resseguier  <valentin.resseguier@gmail.com>
+%             Valentin Resseguier  <valentin.resseguier@gmail.com>
 
 % Copying Permission Statement
 %
